# growup

./: .gitignore  README.md
hardware/: Board.fzz  README.md
software/: .anjuta_sym_db.db  Makefile.am  README.md  configure.ac  pom.xml
software/.anjuta/session/: anjuta.session  dock-layout.xml
software/client/: Gruntfile.js  README.md  bower.json  package.json
software/client/app/: index.html  index.js
software/client/app/temperature/: index.js  temperature-controller.js  temperature-resource.js
software/client/app/temperature/views/: temperature.html
software/client/test/: karma.conf.js
software/client/test/spec/controllers/: about.js  main.js
software/server/: index.js  package.json  server.js
software/server/sensor/temp/: index.js  temperatureSensor.js
software/src/: Makefile.am  python_growup.py
software/src/assembly/: uberjar.xml
software/src/main/java/com/kkoehler/growup/: Main.java
software/src/main/resources/: startUp.sh
